Updating package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "websync-cli",
+  "name": "websync-client",
   "homepage": "https://github.com/arjun-g/bower-websync",
   "version": "4.8.8",
   "authors": [
